fdo#58189 : EDITING: Wrong Chapter Moves with the Navigator

During DnD, the target of the dropped node is wrong when dropping after the first node. That's because no key is calculated for position 0 (= the first node). All the other key-finding methods (eg in Collapse and Expand) don't check for 0.

Change-Id: I33b1b4f27a342dc40b37fe1fbaedeb7553a37ece